# Lab_Projects

./: GUI_Control.py  Rigol_Instrument_Control.py  Rigol_class.py  Test_of_OS.py  hello 1.csv  hello 2  hello 3.csv  os.py
lab_projects/: .keyring.py.swp  auto_detect_instruments.py  pyproject.toml
lab_projects/Classes/: DP832_Power_supply.py
lab_projects/scripts/: CDAQ.py  GUI_Control.py  Lab_Measurement.py  Power_Supply_Control.py  README.md  Remote_Lab_Measurement.py  Rigol_Instrument_Control.py  Test_of_OS.py  USB_to_Device_Check.py  glob open.py  keyring.py  pv_lib_test.py  usb_check.py
