[tool.poetry]
name = "lab-projects"
version = "0.1.0"
description = ""
authors = ["morgan <mhanssler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
paramiko = "^3.4.0"
pyvisa = "^1.14.1"
pyvisa-py = "^0.7.2"
pyusb = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
